<resources>
    <string name="app_name">垃圾分类</string>
    <string name="username">用户名</string>
    <string name="password">密 码</string>
    <string name="remember_password">记住密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_success">注册成功!!</string>
    <string name="login_success">登录成功!!!</string>
    <string name="ok">确认</string>
    <string name="goLogin">去登陆</string>
    <string name="upload_avatar">上传头像</string>
    <string name="please_upload_avatar">请上传头像!</string>
    <string name="go_login">去登陆</string>
    <string name="goRegister">去注册</string>
    <string name="userIsExist">用户已存在!</string>
    <string name="error">发生错误!</string>
    <string name="passwordError">密码错误!</string>
    <string name="usernameEmpty">用户名为空!</string>
    <string name="passwordEmpty">密码为空!</string>
    <string name="questions">答题</string>
    <string name="note">日记</string>
    <string name="encyclopedia">百科</string>
    <string name="settings">设置</string>
    <string name="please_input">请输入…</string>
    <string name="save">保存</string>
    <string name="noteEmpty">笔记内容为空!!</string>
    <string name="delete">删除</string>
    <string name="edit">修改</string>
    <string name="deleteSuccess">删除成功!</string>
    <string name="update">更新</string>
    <string name="update_success">更新成功！</string>
    <string name="create_success">创建成功!</string>
    <string name="create">创建</string>
    <string name="saveError">保存失败!</string>
    <string name="learning_progress">学习进度</string>
    <string name="loginOut">退出登录</string>
    <string name="readFileError">读取文件错误!!!</string>
    <string name="jsonDecodeError">JSON转换失败</string>
    <string name="oumeideduo">恭喜你，做对啦!</string>
    <string name="answerError">回答错误!</string>
    <string name="accuracy">"正确率: "</string>
    <string name="searchRubbishKnowledge">搜索垃圾知识</string>
</resources>