<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99CCCC"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center">


            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/avatar"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:riv_corner_radius="100dp"
                app:riv_border_width="2dp"
                app:riv_border_color="#FFCCCC"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                android:visibility="gone" />

            <TextView
                android:id="@+id/avatar_tips"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/upload_avatar"
                android:textSize="20sp"
                android:gravity="center"
                android:importantForAccessibility="no" />

        </LinearLayout>
        


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:counterEnabled="true"
            app:endIconMode="clear_text"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            app:counterMaxLength="16">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/username"
                android:inputType="text"
                android:maxLength="16" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textWebPassword"
                android:hint="@string/password"
                android:maxLength="16"/>

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/remember_password_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_password" />

            
            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                style="?attr/materialButtonOutlinedStyle"
                android:text="@string/login" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/go_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                style="?attr/materialButtonOutlinedStyle"
                android:text="@string/go_login" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>