<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="10dp"
    tools:context=".fragment.SettingsFragment">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/avatar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:riv_corner_radius="100dp"
        app:riv_border_width="2dp"
        app:riv_border_color="#FFCCCC"
        android:layout_marginBottom="10dp"
        android:scaleType="centerCrop" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:endIconMode="clear_text"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:counterMaxLength="16">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/username"
            android:enabled="false"
            android:maxLength="16" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textWebPassword"
            android:hint="@string/password"
            android:maxLength="16"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        style="?attr/materialButtonOutlinedStyle"
        android:text="@string/update" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        style="?attr/materialButtonOutlinedStyle"
        android:text="@string/loginOut" />

</LinearLayout>